--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel = "stylesheet" src = "styles.css">
+    <link rel = "stylesheet" href = "styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -10,9 +10,34 @@
 <body>
     <div class = "header">Calculator</div>
     <div class = "container">
-        <div class = "answer"></div>
-        <div class = "operations"></div>
+        <div class = "answer">
+            2390482098420384
+        </div>
+        <div class = "operations">
+            <button class = "gray" id = "clear">AC</button>
+            <button class = "gray" id = "delete">C</button>
+            <button class = "gray" id = "negation">+/-</button>
+            <button class = "operator" id = "divide">÷</button>
+            <button class = "number" id = "seven">7</button>
+            <button class = "number" id = "eight">8</button>
+            <button class = "number" id = "nine">9</button>
+            <button class = "operator" id = "multiply">×</button>
+            <button class = "number" id = "four">4</button>
+            <button class = "number" id = "five">5</button>
+            <button class = "number" id = "six">6</button>
+            <button class = "operator" id = "add">+</button>
+            <button class = "number" id = "three">3</button>
+            <button class = "number" id = "two">2</button>
+            <button class = "number" id = "one">1</button>
+            <button class = "operator" id = "subtract">-</button>
+            <button class = ""></button>
+            <button class = "number" id = "zero">0</button>
+            <button class = "number" id = "dot">.</button>
+            <button class = "operator" id = "equal">=</button>
+            
+
+        </div>
     </div>
-    <div class = "footer">Copyrigth @jithin-rajesh</div>
+    <div class = "footer">Copyright @jithin-rajesh</div>
 </body>
 </html>
