--- a/index.html
+++ b/index.html
@@ -10,29 +10,28 @@
 <body>
     <div class = "header">Calculator</div>
     <div class = "container">
-        <div class = "answer">
-            2390482098420384
+        <div class = "answer">0
         </div>
         <div class = "operations">
             <button class = "gray" id = "clear">AC</button>
             <button class = "gray" id = "delete">C</button>
             <button class = "gray" id = "negation">+/-</button>
-            <button class = "operator" id = "divide">÷</button>
-            <button class = "number" id = "seven">7</button>
-            <button class = "number" id = "eight">8</button>
-            <button class = "number" id = "nine">9</button>
-            <button class = "operator" id = "multiply">×</button>
-            <button class = "number" id = "four">4</button>
-            <button class = "number" id = "five">5</button>
-            <button class = "number" id = "six">6</button>
-            <button class = "operator" id = "add">+</button>
-            <button class = "number" id = "three">3</button>
-            <button class = "number" id = "two">2</button>
-            <button class = "number" id = "one">1</button>
-            <button class = "operator" id = "subtract">-</button>
+            <button class = "operator" id = "/">÷</button>
+            <button class = "number" id = "7">7</button>
+            <button class = "number" id = "8">8</button>
+            <button class = "number" id = "9">9</button>
+            <button class = "operator" id = "*">×</button>
+            <button class = "number" id = "4">4</button>
+            <button class = "number" id = "5">5</button>
+            <button class = "number" id = "6">6</button>
+            <button class = "operator" id = "+">+</button>
+            <button class = "number" id = "3">3</button>
+            <button class = "number" id = "2">2</button>
+            <button class = "number" id = "1">1</button>
+            <button class = "operator" id = "-">-</button>
             <button class = ""></button>
-            <button class = "number" id = "zero">0</button>
-            <button class = "number" id = "dot">.</button>
+            <button class = "number" id = "0">0</button>
+            <button class = "number" id = ".">.</button>
             <button class = "operator" id = "equal">=</button>
             
 
