Additional style and DOM changes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <div class = "header">Calculator</div>
     <div class = "container">
-        <div class = "answer">0
-        </div>
+        <div class = "answer">0</div>
         <div class = "operations">
             <button class = "gray" id = "clear">AC</button>
             <button class = "gray" id = "delete">C</button>
@@ -29,10 +28,10 @@
             <button class = "number" id = "2">2</button>
             <button class = "number" id = "1">1</button>
             <button class = "operator" id = "-">-</button>
-            <button class = ""></button>
+            <button class = "display"> </button>
             <button class = "number" id = "0">0</button>
             <button class = "number" id = ".">.</button>
-            <button class = "operator" id = "equal">=</button>
+            <button class = "equal" id = "equal">=</button>
             
 
         </div>
